# AliceBot

./: .env.example  .env.lite.example  .gitignore  ARCHITECTURE.md  ARCHIVE_RECOMMENDATIONS.md  BUILD_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATE.md  LICENSE  PRODUCT_BRIEF.md  PROTECTED_PATHS.md  README.md  RECOMMENDED_ADRS.md  REVIEW_REPORT.md  ROADMAP.md  RULES.md  SECURITY.md  UPGRADE_OVERVIEW_TEMPLATE.md  docker-compose.lite.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
docs/: npm-publish-quickstart.md  phase12-closeout-summary.md  phase13-closeout-summary.md  phase13-product-spec.md  phase13-sprint-13-1-13-3-plan.md  phase14-closeout-summary.md  phase14-design-partner-launch.md  phase14-launch-checklist.md  phase14-model-pack-contract.md  phase14-product-spec.md  phase14-provider-adapter-contract.md  phase14-s1-control-tower-packet.md  phase14-s2-control-tower-packet.md  phase14-s3-control-tower-packet.md  phase14-s4-control-tower-packet.md  phase14-s5-control-tower-packet.md  phase14-sprint-14-1-14-5-plan.md  phase5-continuity-object-model.md  phase5-product-spec.md  phase5-sprint-17-20-plan.md  phase8-product-spec.md  phase8-sprint-29-32-plan.md  phase9-product-spec.md  phase9-public-core-boundary.md  phase9-sprint-33-38-plan.md  phase9-sprint-33-control-tower-packet.md
scripts/: alice_lite_up.sh  api_dev.sh  bootstrap_alice_lite_workspace.py  check_control_doc_truth.py  check_protected_paths.py  dev_up.sh  generate_phase4_mvp_exit_manifest.py  install_hermes_alice_memory_provider.py  load_sample_data.sh  (+40 more)
(+695 files in other folders)
