[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alicebot-foundation"
version = "0.1.0"
description = "Foundation scaffold for the AliceBot modular monolith."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["apps/api/src", "workers"]

[tool.pytest.ini_options]
pythonpath = ["apps/api/src", "workers"]
testpaths = ["tests"]

